--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,4 +1,24 @@
+body {
+    font-family: sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+   font-family: sans-serif;
+   font-weight: bold;
+   color: #000000;
+}
+
 .image {
     width:auto;
     height:auto;
+}
+
+.heading {
+    font-size: 18pt;
+    font-weight: bold;
+}
+
+.sub-heading {
+    font-size: 14pt;
+    font-weight: bold;
 }
